--- a/src/ProtectManager/component/PM_API_Gateway/IngressRoute/OpenServer/pm/ingress-route-pm-replication.yaml
+++ b/src/ProtectManager/component/PM_API_Gateway/IngressRoute/OpenServer/pm/ingress-route-pm-replication.yaml
@@ -1,18 +1,24 @@
 {{- $deploytype:= include "getDeployType" . | default "" }}
-{{- if eq $deploytype "d9"}}
+{{- if eq $deploytype "d10" }}
 apiVersion: traefik.containo.us/v1alpha1
 kind: IngressRoute
 metadata:
-  name: ingress-route-pm-resource-manager
+  name: ingress-route-pm-replication
   namespace: dpa
 spec:
   entryPoints:
-    - third
-    - third6
-    - third_node
-    - internal
+    - replica
   routes:
-    - match: Method(`GET`,`PUT`,`POST`,`DELETE`) && Path(`/v1/resource`)
+    - match: Method(`GET`,`PUT`,`POST`,`DELETE`) && Path(`/v1/auth/token`)
+      kind: Rule
+      services:
+        - name: pm-nginx
+          port: 30093
+          scheme: https
+          serversTransport: serverstransport-traefik-backend
+      middlewares:
+        - name: middleware-pm-replace-path-regex
+    - match: Method(`POST`) && Path(`/v1/clusters/target/relation`)
       kind: Rule
       services:
         - name: pm-nginx
@@ -22,7 +28,7 @@ spec:
       middlewares:
         - name: middleware-pm-replace-path-regex
         - name: middleware-pm-jwt-token-auth
-    - match: Method(`GET`,`PUT`,`POST`,`DELETE`) && PathPrefix(`/v1/environments`)
+    - match: Method(`GET`) && Path(`/v1/users/{id:[0-9a-fA-F]+}`)
       kind: Rule
       services:
         - name: pm-nginx
@@ -32,7 +38,7 @@ spec:
       middlewares:
         - name: middleware-pm-replace-path-regex
         - name: middleware-pm-jwt-token-auth
-    - match: Method(`GET`,`PUT`,`POST`,`DELETE`) && PathPrefix(`/v1/virtual-resource`)
+    - match: Method(`GET`) && Path(`/v1/users/quota/action/check`)
       kind: Rule
       services:
         - name: pm-nginx
@@ -42,7 +48,7 @@ spec:
       middlewares:
         - name: middleware-pm-replace-path-regex
         - name: middleware-pm-jwt-token-auth
-    - match: Method(`GET`,`PUT`,`POST`,`DELETE`) && PathPrefix(`/v1/virtual-machines`)
+    - match: Method(`GET`) && Path(`/v1/clusters/details`)
       kind: Rule
       services:
         - name: pm-nginx
@@ -52,7 +58,7 @@ spec:
       middlewares:
         - name: middleware-pm-replace-path-regex
         - name: middleware-pm-jwt-token-auth
-    - match: Method(`GET`,`PUT`,`POST`,`DELETE`) && PathPrefix(`/v1/compute-resources`)
+    - match: Method(`GET`) && Path(`/v1/clusters/status`)
       kind: Rule
       services:
         - name: pm-nginx
@@ -62,7 +68,7 @@ spec:
       middlewares:
         - name: middleware-pm-replace-path-regex
         - name: middleware-pm-jwt-token-auth
-    - match: Method(`GET`) && PathPrefix(`/v1/free-effective-capacity`)
+    - match: Method(`GET`) && Path(`/v1/local-storage/service-ips`)
       kind: Rule
       services:
         - name: pm-nginx
@@ -72,7 +78,7 @@ spec:
       middlewares:
         - name: middleware-pm-replace-path-regex
         - name: middleware-pm-jwt-token-auth
-    - match: Method(`GET`) && PathPrefix(`/v1/v-center/register/storages`)
+    - match: Method(`GET`) && PathPrefix(`/v1/storages/nas/distribution`)
       kind: Rule
       services:
         - name: pm-nginx
@@ -82,7 +88,7 @@ spec:
       middlewares:
         - name: middleware-pm-replace-path-regex
         - name: middleware-pm-jwt-token-auth
-    - match: Method(`GET`,`PUT`,`POST`,`DELETE`) && PathPrefix(`/v1/protected-objects`) && !Path(`/v1/protected-objects-cyber`,`/v1/protected-objects-cyber/batch`,`/v1/protected-objects/status/action/activate-cyber`,`/v1/protected-objects/status/action/deactivate-cyber`,`/v1/protected-objects/{resource_id}/action/backup-cyber`)
+    - match: Method(`GET`) && Path(`/v1/multiple-storage-pool/remote-dp-user-info`)
       kind: Rule
       services:
         - name: pm-nginx
@@ -92,7 +98,7 @@ spec:
       middlewares:
         - name: middleware-pm-replace-path-regex
         - name: middleware-pm-jwt-token-auth
-    - match: Method(`GET`,`PUT`,`POST`,`DELETE`) && PathPrefix(`/v1/resource-catalogs`)
+    - match: Method(`GET`) && Path(`/v1/storage-user-auths/users/{id:[\w\-]+}`)
       kind: Rule
       services:
         - name: pm-nginx
@@ -102,7 +108,27 @@ spec:
       middlewares:
         - name: middleware-pm-replace-path-regex
         - name: middleware-pm-jwt-token-auth
-    - match: Method(`GET`,`PUT`,`POST`,`DELETE`) && PathPrefix(`/v1/protected-copy-objects`)
+    - match: Method(`POST`, `DELETE`) && Path(`/v1/storage-policy-relation/policies/{id:[\w\-]+}`)
+      kind: Rule
+      services:
+        - name: pm-nginx
+          port: 30093
+          scheme: https
+          serversTransport: serverstransport-traefik-backend
+      middlewares:
+        - name: middleware-pm-replace-path-regex
+        - name: middleware-pm-jwt-token-auth
+    - match: Method(`GET`, `POST`) && Path(`/v1/storage-units`)
+      kind: Rule
+      services:
+        - name: pm-nginx
+          port: 30093
+          scheme: https
+          serversTransport: serverstransport-traefik-backend
+      middlewares:
+        - name: middleware-pm-replace-path-regex
+        - name: middleware-pm-jwt-token-auth
+    - match: Method(`GET`) && Path(`/v1/manual-replication/check-units`)
       kind: Rule
       services:
         - name: pm-nginx
@@ -114,120 +140,4 @@ spec:
         - name: middleware-pm-jwt-token-auth
   tls:
     secretName: secret-pm-tls
-
----
-apiVersion: traefik.containo.us/v1alpha1
-kind: IngressRoute
-metadata:
-  name: ingress-route-pm-resource-manager-except-post
-  namespace: dpa
-spec:
-  entryPoints:
-    - third
-    - third6
-    - third_node
-    - internal
-  routes:
-    - match: Method(`GET`,`PUT`,`DELETE`) && PathPrefix(`/v1/resource/`)
-      kind: Rule
-      services:
-        - name: pm-nginx
-          port: 30093
-          scheme: https
-          serversTransport: serverstransport-traefik-backend
-      middlewares:
-        - name: middleware-pm-replace-path-regex
-        - name: middleware-pm-jwt-token-auth
-  tls:
-    secretName: secret-pm-tls
-
----
-apiVersion: traefik.containo.us/v1alpha1
-kind: IngressRoute
-metadata:
-  name: ingress-route-pm-resource-manager-only-post
-  namespace: dpa
-spec:
-  entryPoints:
-    - third
-    - third6
-    - third_node
-    - internal
-  routes:
-    - match: Method(`POST`) && PathPrefix(`/v1/resource/action/`)
-      kind: Rule
-      services:
-        - name: pm-nginx
-          port: 30093
-          scheme: https
-          serversTransport: serverstransport-traefik-backend
-      middlewares:
-        - name: middleware-pm-replace-path-regex
-        - name: middleware-pm-jwt-token-auth
-    - match: Method(`POST`) && Path(`/v1/resource/host/{host_id:[0-9a-zA-Z\-]{1,64}}/action/sync-snmp-conf`)
-      kind: Rule
-      services:
-        - name: pm-nginx
-          port: 30093
-          scheme: https
-          serversTransport: serverstransport-traefik-backend
-      middlewares:
-        - name: middleware-pm-replace-path-regex
-        - name: middleware-pm-jwt-token-auth
-    - match: Method(`POST`) && Path(`/v1/resource/host/{host_id:^[0-9a-zA-Z\-]{1,64}$}/asm-auth`)
-      kind: Rule
-      services:
-        - name: pm-nginx
-          port: 30093
-          scheme: https
-          serversTransport: serverstransport-traefik-backend
-      middlewares:
-        - name: middleware-pm-replace-path-regex
-        - name: middleware-pm-jwt-token-auth
-  tls:
-    secretName: secret-pm-tls
-
----
-apiVersion: traefik.containo.us/v1alpha1
-kind: IngressRoute
-metadata:
-  name: ingress-route-pm-resource-manager-mtls
-  namespace: dpa
-spec:
-  entryPoints:
-    - agent
-    - agent6
-    - third
-  routes:
-    - match: HostRegexp(`CDMWebServer`) && Method(`POST`) && Path(`/v1/resource/host/`)
-      kind: Rule
-      services:
-        - name: pm-nginx
-          port: 30093
-          scheme: https
-          serversTransport: serverstransport-traefik-backend
-      middlewares:
-        - name: middleware-pm-replace-path-regex
-    - match: HostRegexp(`CDMWebServer`) && Method(`GET`) && Path(`/v1/internal/environments`)
-      kind: Rule
-      services:
-        - name: pm-nginx
-          port: 30093
-          scheme: https
-          serversTransport: serverstransport-traefik-backend
-      middlewares:
-        - name: middleware-pm-replace-path-regex
-    - match: HostRegexp(`CDMWebServer`) && Method(`GET`,`PUT`) && Path(`/v1/internal/service-links`)
-      kind: Rule
-      services:
-        - name: pm-nginx
-          port: 30093
-          scheme: https
-          serversTransport: serverstransport-traefik-backend
-      middlewares:
-        - name: middleware-pm-replace-path-regex
-  tls:
-    secretName: secret-pm-tls
-    options:
-      name: tls-option-pm-mtls
 {{- end }}
