--- a/src/ProtectManager/component/PM_API_Gateway/IngressRoute/OpenServer/pm/ingress-route-pm-system-base.yaml
+++ b/src/ProtectManager/component/PM_API_Gateway/IngressRoute/OpenServer/pm/ingress-route-pm-system-base.yaml
@@ -1,5 +1,5 @@
 {{- $deploytype:= include "getDeployType" . | default "" }}
-{{- if eq $deploytype "d9"}}
+{{- if eq $deploytype "d10" }}
 apiVersion: traefik.containo.us/v1alpha1
 kind: IngressRoute
 metadata:
@@ -23,6 +23,12 @@ spec:
       middlewares:
         - name: middleware-pm-replace-path-regex
         - name: middleware-pm-jwt-token-auth
+    - match: Method(`GET`) && Path(`/v1/system/healthcheck`)
+      kind: Rule
+      services:
+        - name: pm-nginx
+          port: 30094
+          scheme: http
     - match: Method(`GET`,`PUT`,`POST`) && Path(`/v1/external-system`)
       kind: Rule
       services:
@@ -78,6 +84,16 @@ spec:
           serversTransport: serverstransport-traefik-backend
       middlewares:
         - name: middleware-pm-jwt-token-auth
+    - match: Method(`GET`,`PUT`,`POST`,`DELETE`) && Path(`/v1/notify/{path:(action/test|emails|rules)}`)
+      kind: Rule
+      services:
+        - name: pm-nginx
+          port: 30093
+          scheme: https
+          serversTransport: serverstransport-traefik-backend
+      middlewares:
+        - name: middleware-pm-replace-path-regex
+        - name: middleware-pm-jwt-token-auth
     - match: Method(`DELETE`) && Path(`/v1/label/delete`)
       kind: Rule
       services:
@@ -115,6 +131,16 @@ spec:
       middlewares:
         - name: middleware-pm-replace-path-regex
         - name: middleware-pm-jwt-token-auth
+    - match: Method(`POST`) && Path(`/v1/users/saml`)
+      kind: Rule
+      services:
+        - name: pm-nginx
+          port: 30093
+          scheme: https
+          serversTransport: serverstransport-traefik-backend
+      middlewares:
+        - name: middleware-pm-replace-path-regex
+        - name: middleware-pm-jwt-token-auth
     - match: Method(`GET`) && Path(`/v1/multiple-storage-pool/remote-dp-user`)
       kind: Rule
       services:
@@ -126,26 +152,6 @@ spec:
         - name: middleware-pm-replace-path-regex
         - name: middleware-pm-jwt-token-auth
     - match: Method(`GET`) && Path(`/v1/multiple-storage-pool/remote-dp-user-info`)
-      kind: Rule
-      services:
-        - name: pm-nginx
-          port: 30093
-          scheme: https
-          serversTransport: serverstransport-traefik-backend
-      middlewares:
-        - name: middleware-pm-replace-path-regex
-        - name: middleware-pm-jwt-token-auth
-    - match: Method(`GET`) && Path(`/v1/manual-replication/check-units`)
-      kind: Rule
-      services:
-        - name: pm-nginx
-          port: 30093
-          scheme: https
-          serversTransport: serverstransport-traefik-backend
-      middlewares:
-        - name: middleware-pm-replace-path-regex
-        - name: middleware-pm-jwt-token-auth
-    - match: Method(`POST`) && Path(`/v1/users/saml`)
       kind: Rule
       services:
         - name: pm-nginx
@@ -205,7 +211,7 @@ spec:
       middlewares:
         - name: middleware-pm-replace-path-regex
         - name: middleware-pm-jwt-token-auth
-    - match: Method(`GET`) && PathPrefix(`/v1/license`)
+    - match: Method(`GET`,`POST`) && Path(`/v1/license`,`/v1/license/action/{path:(export|import)}`)
       kind: Rule
       services:
         - name: pm-nginx
@@ -254,15 +260,6 @@ spec:
           serversTransport: serverstransport-traefik-backend
       middlewares:
         - name: middleware-pm-replace-path-regex
-        - name: middleware-pm-jwt-token-auth
-    - match: Method(`PUT`,`POST`,`GET`,`DELETE`) && PathPrefix(`/v1/report-policies`)
-      kind: Rule
-      services:
-        - name: pm-nginx
-          port: 30093
-          scheme: https
-          serversTransport: serverstransport-traefik-backend
-      middlewares:
         - name: middleware-pm-jwt-token-auth
     - match: Method(`GET`,`PUT`,`POST`,`DELETE`) && PathPrefix(`/v1/report`,`/v1/security/securityIp`,`/v1/security/weakpasswords`,`/v1/security/weakpasswords`,`/v1/security/weakpassword`,`/v1/security/featureSwitch`)
       kind: Rule
@@ -334,7 +331,27 @@ spec:
       middlewares:
         - name: middleware-pm-replace-path-regex
         - name: middleware-pm-jwt-token-auth
-    - match: Method(`GET`,`PUT`,`POST`,`DELETE`) && PathPrefix(`/v1/system/{path:(esn|time|initConfig|initStatusInfo|backupNetPlaneStatusInfo|archiveNetPlaneStatusInfo|initStorage|initConfig|backupNetwork|archiveNetwork|applicationType|expandBackupServiceIp|expandControllerStatus|expandBackupService|standard-backup-service|init-standard-backup-service|service-status-info|switches)}`)
+    - match: Method(`GET`) && Path(`/v1/system/network-info`)
+      kind: Rule
+      services:
+        - name: pm-nginx
+          port: 30093
+          scheme: https
+          serversTransport: serverstransport-traefik-backend
+      middlewares:
+        - name: middleware-pm-replace-path-regex
+        - name: middleware-pm-jwt-token-auth
+    - match: Method(`GET`) && Path(`/v1/system/node-network-info`)
+      kind: Rule
+      services:
+        - name: pm-nginx
+          port: 30093
+          scheme: https
+          serversTransport: serverstransport-traefik-backend
+      middlewares:
+        - name: middleware-pm-replace-path-regex
+        - name: middleware-pm-jwt-token-auth
+    - match: Method(`GET`,`PUT`,`POST`,`DELETE`) && PathPrefix(`/v1/system/{path:(esn|time|initConfig|initStatusInfo|backupNetPlaneStatusInfo|archiveNetPlaneStatusInfo|initStorage|initConfig|backupNetwork|archiveNetwork|applicationType|standard-backup-service|init-standard-backup-service|service-status-info|switches|esn|ntp)}`)
       kind: Rule
       services:
         - name: pm-nginx
@@ -355,26 +372,6 @@ spec:
         - name: middleware-pm-replace-path-regex
         - name: middleware-pm-jwt-token-auth
     - match: Method(`GET`,`PUT`,`POST`,`DELETE`) && PathPrefix(`/v1/ldap`)
-      kind: Rule
-      services:
-        - name: pm-nginx
-          port: 30093
-          scheme: https
-          serversTransport: serverstransport-traefik-backend
-      middlewares:
-        - name: middleware-pm-replace-path-regex
-        - name: middleware-pm-jwt-token-auth
-    - match: Method(`POST`) && Path(`/v1/system/auth`)
-      kind: Rule
-      services:
-        - name: pm-nginx
-          port: 30093
-          scheme: https
-          serversTransport: serverstransport-traefik-backend
-      middlewares:
-        - name: middleware-pm-replace-path-regex
-        - name: middleware-pm-jwt-token-auth
-    - match: Method(`GET`) && PathPrefix(`/v2/system/failover-group`)
       kind: Rule
       services:
         - name: pm-nginx
@@ -445,33 +442,6 @@ spec:
         - name: middleware-pm-replace-path-regex
         - name: middleware-pm-jwt-token-auth
     - match: Method(`GET`) && Path(`/v2/hcs/availablezones`)
-      kind: Rule
-      services:
-        - name: pm-nginx
-          port: 30093
-          scheme: https
-          serversTransport: serverstransport-traefik-backend
-      middlewares:
-        - name: middleware-pm-jwt-token-auth
-    - match: Method(`GET`) && Path(`/v1/dme/availability-zones`)
-      kind: Rule
-      services:
-        - name: pm-nginx
-          port: 30093
-          scheme: https
-          serversTransport: serverstransport-traefik-backend
-      middlewares:
-        - name: middleware-pm-jwt-token-auth
-    - match: Method(`GET`) && Path(`/v1/dme/projects`)
-      kind: Rule
-      services:
-        - name: pm-nginx
-          port: 30093
-          scheme: https
-          serversTransport: serverstransport-traefik-backend
-      middlewares:
-        - name: middleware-pm-jwt-token-auth
-    - match: Method(`GET`,`POST`) && Path(`/v1/servicization-nms/dme`)
       kind: Rule
       services:
         - name: pm-nginx
@@ -630,7 +600,7 @@ spec:
       middlewares:
         - name: middleware-pm-replace-path-regex
         - name: middleware-pm-jwt-token-auth
-    - match: Method(`POST`) && Path(`/v1/common-share/restore`)
+    - match: Method(`GET`,`PUT`,`POST`,`DELETE`) && PathPrefix(`/v1/sftp`)
       kind: Rule
       services:
         - name: pm-nginx
@@ -640,7 +610,7 @@ spec:
       middlewares:
         - name: middleware-pm-replace-path-regex
         - name: middleware-pm-jwt-token-auth
-    - match: Method(`PUT`) && Path(`/v1/common-share/restore/{copyId:\w{8}(-\w{4}){3}-\w{12}}`)
+    - match: Method(`PUT`,`POST`) && PathPrefix(`/v1/common-share`)
       kind: Rule
       services:
         - name: pm-nginx
@@ -670,6 +640,26 @@ spec:
       middlewares:
         - name: middleware-pm-replace-path-regex
         - name: middleware-pm-jwt-token-auth
+    - match: Method(`GET`,`PUT`,`POST`,`DELETE`) && PathPrefix(`/v1/anti-ransomware`)
+      kind: Rule
+      services:
+        - name: pm-nginx
+          port: 30093
+          scheme: https
+          serversTransport: serverstransport-traefik-backend
+      middlewares:
+        - name: middleware-pm-replace-path-regex
+        - name: middleware-pm-jwt-token-auth
+    - match: Method(`GET`,`PUT`,`POST`,`DELETE`) && PathPrefix(`/v1/export-files`)
+      kind: Rule
+      services:
+        - name: pm-nginx
+          port: 30093
+          scheme: https
+          serversTransport: serverstransport-traefik-backend
+      middlewares:
+        - name: middleware-pm-replace-path-regex
+        - name: middleware-pm-jwt-token-auth
     - match: Method(`GET`) && Path(`/v1/logs/level/summary`)
       kind: Rule
       services:
@@ -681,16 +671,6 @@ spec:
         - name: middleware-pm-replace-path-regex
         - name: middleware-pm-jwt-token-auth
     - match: Method(`GET`) && Path(`/v1/logs/level/info`)
-      kind: Rule
-      services:
-        - name: pm-nginx
-          port: 30093
-          scheme: https
-          serversTransport: serverstransport-traefik-backend
-      middlewares:
-        - name: middleware-pm-replace-path-regex
-        - name: middleware-pm-jwt-token-auth
-    - match: Method(`GET`,`PUT`,`POST`,`DELETE`) && PathPrefix(`/v1/export-files`)
       kind: Rule
       services:
         - name: pm-nginx
@@ -760,26 +740,6 @@ spec:
       middlewares:
         - name: middleware-pm-replace-path-regex
         - name: middleware-pm-jwt-token-auth
-    - match: Method(`GET`) && Path(`/v1/inspect/service/status`)
-      kind: Rule
-      services:
-        - name: pm-nginx
-          port: 30093
-          scheme: https
-          serversTransport: serverstransport-traefik-backend
-      middlewares:
-        - name: middleware-pm-replace-path-regex
-        - name: middleware-pm-jwt-token-auth
-    - match: Method(`GET`,`PUT`,`POST`,`DELETE`) && PathPrefix(`/v1/anti-ransomware`)
-      kind: Rule
-      services:
-        - name: pm-nginx
-          port: 30093
-          scheme: https
-          serversTransport: serverstransport-traefik-backend
-      middlewares:
-        - name: middleware-pm-replace-path-regex
-        - name: middleware-pm-jwt-token-auth
     - match: Method(`GET`,`PUT`,`POST`,`DELETE`) && PathPrefix(`/v2/copies`)
       kind: Rule
       services:
@@ -791,6 +751,16 @@ spec:
         - name: middleware-pm-replace-path-regex
         - name: middleware-pm-jwt-token-auth
     - match: Method(`GET`,`PUT`,`POST`,`DELETE`) && PathPrefix(`/v2/databases`)
+      kind: Rule
+      services:
+        - name: pm-nginx
+          port: 30093
+          scheme: https
+          serversTransport: serverstransport-traefik-backend
+      middlewares:
+        - name: middleware-pm-replace-path-regex
+        - name: middleware-pm-jwt-token-auth
+    - match: Method(`GET`) && Path(`/v1/manual-replication/check-units`)
       kind: Rule
       services:
         - name: pm-nginx
@@ -981,6 +951,15 @@ spec:
           serversTransport: serverstransport-traefik-backend
       middlewares:
         - name: middleware-pm-replace-path-regex
+    - match: Method(`GET`,`POST`) && Path(`/v1/servicization-nms/dme`)
+      kind: Rule
+      services:
+        - name: pm-nginx
+          port: 30093
+          scheme: https
+          serversTransport: serverstransport-traefik-backend
+      middlewares:
+        - name: middleware-pm-jwt-token-auth
     - match: Method(`POST`) && Path(`/v1/auth/dme-token`)
       kind: Rule
       services:
@@ -990,6 +969,24 @@ spec:
           serversTransport: serverstransport-traefik-backend
       middlewares:
         - name: middleware-pm-replace-path-regex
+    - match: Method(`GET`) && Path(`/v1/dme/availability-zones`)
+      kind: Rule
+      services:
+        - name: pm-nginx
+          port: 30093
+          scheme: https
+          serversTransport: serverstransport-traefik-backend
+      middlewares:
+        - name: middleware-pm-jwt-token-auth
+    - match: Method(`GET`) && Path(`/v1/dme/projects`)
+      kind: Rule
+      services:
+        - name: pm-nginx
+          port: 30093
+          scheme: https
+          serversTransport: serverstransport-traefik-backend
+      middlewares:
+        - name: middleware-pm-jwt-token-auth
     - match: Method(`GET`,`PUT`,`POST`,`DELETE`) && Path(`/v1/auth/dynamic-code/send`)
       kind: Rule
       services:
@@ -1026,6 +1023,7 @@ spec:
           serversTransport: serverstransport-traefik-backend
       middlewares:
         - name: middleware-pm-replace-path-regex
+        - name: middleware-pm-jwt-token-auth
     - match: Method(`GET`,`DELETE`) && Path(`/v1/exercise/{exerciseId}`)
       kind: Rule
       services:
@@ -1035,7 +1033,18 @@ spec:
           serversTransport: serverstransport-traefik-backend
       middlewares:
         - name: middleware-pm-replace-path-regex
+        - name: middleware-pm-jwt-token-auth
     - match: Method(`POST`) && Path(`/v1/exercise/active/{exerciseId}`)
+      kind: Rule
+      services:
+        - name: pm-nginx
+          port: 30093
+          scheme: https
+          serversTransport: serverstransport-traefik-backend
+      middlewares:
+        - name: middleware-pm-replace-path-regex
+        - name: middleware-pm-jwt-token-auth
+    - match: Method(`GET`) && Path(`/v1/exercise/resource`)
       kind: Rule
       services:
         - name: pm-nginx
@@ -1064,6 +1073,7 @@ spec:
           serversTransport: serverstransport-traefik-backend
       middlewares:
         - name: middleware-pm-replace-path-regex
+        - name: middleware-pm-jwt-token-auth
     - match: Method(`GET`,`PUT`,`POST`,`DELETE`) && Path(`/v1/users/{id:[0-9a-fA-F]+}/action/update_password`)
       kind: Rule
       services:
@@ -1073,7 +1083,6 @@ spec:
           serversTransport: serverstransport-traefik-backend
       middlewares:
         - name: middleware-pm-replace-path-regex
-        - name: middleware-pm-jwt-token-auth-no-version
     - match: Method(`PUT`) && Path(`/v1/users/unify-passwd/modify`)
       kind: Rule
       services:
@@ -1197,6 +1206,7 @@ metadata:
 spec:
   entryPoints:
     - third
+    - third6
   routes:
     - match: Method(`PUT`) && Path(`/v1/system/status-info`)
       kind: Rule
@@ -1241,15 +1251,6 @@ spec:
       middlewares:
         - name: middleware-pm-replace-path-regex
     - match: Host(`CDMWebServer`) &&  Method(`GET`) && Path(`/v1/internal/clusters/local/nodes`)
-      kind: Rule
-      services:
-        - name: pm-nginx
-          port: 30093
-          scheme: https
-          serversTransport: serverstransport-traefik-backend
-      middlewares:
-        - name: middleware-pm-replace-path-regex
-    - match: Host(`CDMWebServer`) && Method(`GET`) && Path(`/v1/internal/clusters/backup/member/service-ips`)
       kind: Rule
       services:
         - name: pm-nginx
@@ -1347,6 +1348,15 @@ spec:
       middlewares:
         - name: middleware-pm-replace-path-regex
     - match: Host(`CDMWebServer`) && Method(`GET`) && Path(`/v1/host-agent/connection/check`)
+      kind: Rule
+      services:
+        - name: pm-nginx
+          port: 30093
+          scheme: https
+          serversTransport: serverstransport-traefik-backend
+      middlewares:
+        - name: middleware-pm-replace-path-regex
+    - match: Host(`CDMWebServer`) && Method(`GET`) && Path(`/v1/internal/clusters/backup/member/service-ips`)
       kind: Rule
       services:
         - name: pm-nginx
@@ -1468,33 +1478,7 @@ spec:
           scheme: https
           serversTransport: serverstransport-traefik-backend
       middlewares:
-        - name: middleware-pm-replace-path-regex
         - name: middleware-pm-rate-limit-average
   tls:
     secretName: secret-pm-tls
-
----
-apiVersion: traefik.containo.us/v1alpha1
-kind: IngressRoute
-metadata:
-  name: ingress-route-pm-system-base-ha-mtls
-  namespace: dpa
-spec:
-  entryPoints:
-    - third
-    - third6
-  routes:
-    - match: Host(`CDMWebServerHA`) && Method(`POST`) && Path(`/v1/internal/clusters/backup/component/sync-ip/ha`)
-      kind: Rule
-      services:
-        - name: pm-nginx
-          port: 30093
-          scheme: https
-          serversTransport: serverstransport-traefik-backend
-      middlewares:
-        - name: middleware-pm-replace-path-regex
-  tls:
-    secretName: secret-pm-tls
-    options:
-      name: tls-option-pm-ha
 {{- end }}
