Match-id-d06e0a73f6ba5947803b80c445c0ead849552a98

--- a/src/ProtectManager/component/PM_GUI/src/service/src/main/resources/application.properties
+++ b/src/ProtectManager/component/PM_GUI/src/service/src/main/resources/application.properties
@@ -19,7 +19,7 @@ spring.redis.url=rediss://infrastructure:6369
 spring.redis.key-store=/opt/OceanProtect/infrastructure/cert/redis/redis.ks
 spring.redis.key-store-password-file=/opt/OceanProtect/infrastructure/cert/redis/redis_cert
 spring.redis.nettyThreads=128
-spring.redis.cluster.nodes=rediss://infrastructure-0.infrastructure.dpa.svc.cluster.local:6369, rediss://infrastructure-1.infrastructure.dpa.svc.cluster.local:6369, rediss://infrastructure-2.infrastructure.dpa.svc.cluster.local:6369
+spring.redis.cluster.nodes=rediss://infrastructure-0.infrastructure.dpa.svc.cluster.local:6369, rediss://infrastructure-1.infrastructure.dpa.svc.cluster.local:6369, rediss://infrastructure-2.infrastructure.dpa.svc.cluster.local:6369, rediss://infrastructure-0.infrastructure.dpa.svc.cluster.local:6370, rediss://infrastructure-1.infrastructure.dpa.svc.cluster.local:6370, rediss://infrastructure-2.infrastructure.dpa.svc.cluster.local:6370
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://gaussdb:6432/postgres
 spring.datasource.username=generaldb
